--- a/src/views/AboutUs/styles.scss
+++ b/src/views/AboutUs/styles.scss
@@ -2,6 +2,7 @@
 
 .about-us-container {
   @include full-flex-dimensions;
+  overflow-y: initial;
 
   .section1-container {
     margin-bottom: 4rem;
