--- a/src/views/Contact/styles.scss
+++ b/src/views/Contact/styles.scss
@@ -2,4 +2,5 @@
 
 .contact-container {
   @include full-flex-dimensions;
+  overflow-y: initial;
 }
