--- a/src/views/Rooms/styles.scss
+++ b/src/views/Rooms/styles.scss
@@ -2,4 +2,5 @@
 
 .rooms-container {
   @include full-flex-dimensions;
+  overflow-y: initial;
 }
